fixed for CHLK-3724 Teacher. Attendance. "Date picker" will have the cut off text

--- a/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_class-disciplines-page.sass
@@ -1,5 +1,7 @@
 .date-text
   position: relative
+  display: inline-block
+  line-height: 24px
 
   &::before
     +icons-24-sprite(calendar)
